--- a/capstone-client-web-application/capstone-client-web-application/templates/product.html
+++ b/capstone-client-web-application/capstone-client-web-application/templates/product.html
@@ -3,10 +3,10 @@
     <div>
         <h4>{{name}}</h4>
         <div class="photo">
-            <img src="/images/products/{{imageUrl}}" alt=""
+            <img src="images/products/{{imageUrl}}" alt=""
                  onclick="showImageDetailForm(`{{name}}`,'/images/products/{{imageUrl}}')"
             >
-          <h4 class="price">${{price}}</h4>
+            <h4 class="price">${{price}}</h4>
         </div>
         <div>
             <p>{{description}}</p>
